<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    style="@style/LayoutHeigAndWidtMatchParent"
    android:fitsSystemWindows="true"
    tools:context="com.laboratory.android.login.view.WelcomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@color/grey_backgroung"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            style="@style/LayoutHeigAndWidtMatchParent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout style="@style/LayoutHeigAndWidtMatchParent">

                <ImageView
                    android:id="@+id/bg_header"
                    style="@style/LayoutHeigAndWidtMatchParent"
                    android:layout_marginBottom="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ctoolbar_background_1"
                    app:layout_collapseMode="pin" />

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="110dp"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/user_2"
                    android:elevation="5dp"
                    android:onClick="showFullImage"
                    android:scaleType="centerCrop"
                    android:transitionName="imagemCompartilhada"
                    app:layout_collapseMode="pin" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/MyToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <TextView
                    style="@style/LayoutHeigAndWidtWrapContent"
                    android:background="#00ffffff"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        style="@style/LayoutHeigAndWidtMatchParent"
        android:background="@color/grey_backgroung"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout style="@style/LayoutHeigAndWidtMatchParent">

            <android.support.v7.widget.CardView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/card_1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/performance" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/one"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/card_2" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/goal" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/two"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/card_3" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/mentors" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
